# schedtxt_auth

./: .dockerignore.yaml  .dockerignore.yml  .env.docker.sample  .env.local.sample  .env.sample  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  main.go
.gitea/workflows/: pr.yml  workflow.yaml  workflow.yml
cmd/api/: main.go  main_test.go
docs/: docs.go  swagger.json  swagger.yaml
internal/config/: config.go
internal/db/: connection.go
internal/handler/: login.go  login_test.go  mock_store.go  refresh.go  refresh_test.go  register.go  register_test.go  service.go  service_test.go  utility.go  utility_test.go
internal/handler/endpoint/: endpoint.go
internal/middleware/: auth.go  middleware.go
internal/model/: token.go  user.go
internal/services/: jwt_service.go
internal/store/: service.go  user.go
internal/store/mock/: service_store.go  store.go  user_store.go
internal/utility/: hashing.go  token.go
internal/version/: version.go
migrations/: 20260607214210_init.sql  schema.sql
src/: lib.rs  main.rs
src/callers/: common.rs  login.rs  messages.rs  mod.rs  register.rs
src/config/: mod.rs
src/db/: init.rs  mod.rs
src/env/: environment.rs  keys.rs  mod.rs  utility.rs
src/hashing/: mod.rs
src/repo/: mod.rs  service.rs
src/token_stuff/: mod.rs
tests/: tests.rs
version/: version.go
